# LDPC_Experiments

./: .gitignore  CMakeLists.txt  H_with_padding.alist  README.md  library.h  main.cpp
matrix_1/: H.alist
matrix_2/: H.alist  H_with_padding.alist
